[gd_scene load_steps=2 format=3 uid="uid://dejaa8uk7nxoi"]

[ext_resource type="Script" path="res://Main.gd" id="1_7xln6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_7xln6")

[node name="PlayTest" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Test"

[node name="PlayRandomMountainRange" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 320.0
offset_right = 832.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Random Mountain Range"

[node name="PlayForest" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 64.0
offset_right = 832.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Forest"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 512.0
offset_right = 832.0
offset_bottom = 576.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="PlayTest" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PlayRandomMountainRange" to="." method="_on_play_random_mountain_range_pressed"]
[connection signal="pressed" from="PlayForest" to="." method="_on_play_forest_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
